--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0",
-    "vuex-i18n": "^1.8.0"
+    "vuex-i18n": "^1.8.0",
+    "vformer":"^0.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
@@ -88,15 +89,12 @@
     "log4js": "^2.3.9",
     "mocha": "^4.0.1",
     "nightwatch": "^0.9.12",
-    "node-sass": "^4.7.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.6",
-    "sass-resources-loader": "^1.3.1",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -104,7 +102,7 @@
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.6.2",
     "url-search-params": "^0.10.0",
-    "vee-validate": "2.0.0-beta.25",
+    "style-loader": "^0.21.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
