--- a/package.json
+++ b/package.json
@@ -22,17 +22,20 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "vformer": "0.0.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-material": "^1.0.0-beta-7",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.0",
-    "vuex-i18n": "^1.8.0",
-    "vformer": "^0.0.4"
+    "vuex-i18n": "^1.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
-    "ava": "^0.22.0",
+    "postcss-import": "^11.1.0",
+    "postcss-less": "^1.1.5",
+    "postcss-url": "^7.3.2",
+    "postcss-pxtorem": "^4.0.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
@@ -42,9 +45,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^4.1.2",
     "chalk": "^2.3.0",
-    "chromedriver": "^2.33.2",
     "clean-webpack-plugin": "^0.1.17",
     "compression": "^1.7.1",
     "compression-webpack-plugin": "^1.0.1",
@@ -56,15 +57,6 @@
     "cross-env": "^5.1.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.7",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "express-http-proxy": "^1.0.7",
@@ -75,34 +67,20 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "log4js": "^2.3.9",
-    "mocha": "^4.0.1",
-    "nightwatch": "^0.9.12",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^2.4.1",
-    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.21.0",
     "url-loader": "^0.6.2",
     "url-search-params": "^0.10.0",
-    "style-loader": "^0.21.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
