--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
-    "vformer": "0.0.5",
+    "vformer": "^0.0.5",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-material": "^1.0.0-beta-7",
