--- a/package.json
+++ b/package.json
@@ -32,10 +32,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.6",
-    "postcss-import": "^11.1.0",
-    "postcss-less": "^1.1.5",
-    "postcss-url": "^7.3.2",
-    "postcss-pxtorem": "^4.0.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.1",
@@ -74,6 +70,11 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "postcss": "^6.0.22",
+    "postcss-import": "^11.1.0",
+    "postcss-less": "^1.1.5",
+    "postcss-pxtorem": "^4.0.1",
+    "postcss-url": "^7.3.2",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
