--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
-    "vformer": "^0.0.7",
+    "vformer": "^0.1.10",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
     "vue-material": "^1.0.0-beta-7",
@@ -53,6 +53,15 @@
     "cross-env": "^5.1.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.7",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "express-http-proxy": "^1.0.7",
@@ -63,9 +72,9 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
-    "less": "^2.7.3",
+    "less": "^3.8.0",
     "less-loader": "^4.0.5",
-    "log4js": "^2.3.9",
+    "log4js": "^3.0.3",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
@@ -87,7 +96,7 @@
     "vue-template-compiler": "^2.5.2",
     "vuex-i18n": "^1.8.0",
     "vux": "^2.6.5",
-    "vux-loader": "^1.1.15",
+    "vux-loader": "^1.2.9",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
