--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node build/dev-server.js",
     "mock": "node service/app.js",
     "createEntry": "node config/createEntry.js",
-    "mdev": "concurrently \"npm run dev\" \"npm run mock\"",
+    "mdev": "concurrently \"npm run dev --local\" \"npm run mock\"",
     "start": "npm run dev",
     "dll": "webpack --config build/webpack.dll.conf.js -p  --progress && cp -r -f dist/static/js/vendor.dll.js static/js/vendor.dll.js",
     "build": "node build/build.js",
@@ -41,6 +41,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
+    "body-parser": "^1.18.3",
     "chalk": "^2.3.0",
     "clean-webpack-plugin": "^0.1.17",
     "compression": "^1.7.1",
