--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.1.1",
     "isomorphic-fetch": "^2.2.1",
+    "universal-router": "^6.0.0",
     "vformer": "^0.1.10",
     "vue": "^2.5.2",
     "vue-axios": "^2.0.2",
